--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <div class="education-header">
                     <div class="degree">
                         <span class="icon">🎯</span>
-                        Master of Life Science Management & Engineering
+                        Msc. Life Science Engineering & Management 
                     </div>
                     <div class="education-duration">Oct 2024 - Present</div>
                 </div>
@@ -241,7 +241,7 @@
                 <div class="education-header">
                     <div class="degree">
                         <span class="icon">🧬</span>
-                        Bachelor of Science - Molecular Biology and Genetics
+                        Bsc. Molecular Biology and Genetics - (Faculty of Engineering & Natural Sciences)
                     </div>
                     <div class="education-duration">Sep 2018 - 2023</div>
                 </div>
@@ -250,7 +250,7 @@
                     Bahçeşehir University
                 </div>
                 <div class="education-details">
-                    Faculty of Engineering and Natural Sciences • ApplyBAU Scholarship • Capstone Project Grade: A
+                    • ApplyBAU Scholarship • Capstone Project Grade: A
                 </div>
             </div>
         </section>
@@ -295,7 +295,7 @@
                 </div>
                 <div class="project-company"><span>📈</span>MZV YetGen</div>
                 <div class="project-description">
-                    Sustainable Innovation: Designed a mobile app aligned with SDG "Healthy and Quality Life" during the MZV YetGen program.
+                    Collaborated with team members during the MZV YetGen (Yetkin Gençler) training program to conceptualize and design a mobile application project aligned with the Sustainable Development Goals, specifically targeting the goal of "Healthy and Quality Life".
                 </div>
             </div>
         </section>
@@ -332,9 +332,9 @@
                         Programming & Development
                     </h3>
                     <div class="skill-list">
-                        Python (Jupyter Notebook, VS Code, Sublime Text)<br>
                         Git, GitHub<br>
-                        Data Visualization
+                        Python (VSCode, Jupyter Notebook, Sublime Text, Scikit-learn, Numpy, Matplotlib, Streamlit, Pandas)<br>
+                        HTML, JavaScript,SQL<br>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -345,7 +345,6 @@
                     <div class="skill-list">
                         UCSC Genome Browser<br>
                         Ensembl, Galaxy<br>
-                        NanoDrop, DNA isolation, qPCR
                     </div>
                 </div>
                 <div class="skill-category">
@@ -366,11 +365,13 @@
                     </h3>
                     <div class="skill-list">
                         Turkish (Native)<br>
-                        English (B2)<br>
+                        English (B2-C1)<br>
                         German (A2)<br>
                         Spanish (A1-A2)
                     </div>
                 </div>
+        </section>
+        <section class="section">
             <a href="v0/index.html">Go to v0 Version</a>
             </div>
         </section>
