--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="job-description" style="text-align: justify;">
                 Imagine a world where science meets innovation, where the code of life unlocks new possibilities for human performance. 
                 I'm Uğur Ersöz, a passionate Product Developer and Researcher with a knack for blending bioinformatics with cutting-edge technology.
-                With a foundation in Molecular Biology and Genetics from Bahçeşehir University, I'm now diving deeper into Life Science Management & Engineering at HTW Berlin.
+                With a foundation in Molecular Biology and Genetics from Bahçeşehir University, I'm now diving deeper into Life Science Engineering & Management at HTW Berlin.
                 My journey is fueled by curiosity, driven by data, and shaped by a vision to create solutions that transform sports, nutrition, and health.
                 From coding insightful visualizations in Python to leading interactive research projects, I thrive at the intersection of science and technology,
                 always eager to tackle the next big challenge.
