✨ Update project images from placeholders to actual project visuals

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div class="project-card">
                 <div class="project-content">
                     <div class="project-image-container">
-                        <img class="project-image" src="https://via.placeholder.com/200x140?text=Oxford+Poster" alt="Oxford Uniqgene Poster" onclick="openModal(this)">
+                        <img class="project-image" src="images/oxford-uniqgene-poster.png" alt="Oxford Uniqgene Poster" onclick="openModal(this)">
                     </div>
                     <div class="project-info-content">
                         <div class="project-header">
@@ -340,7 +340,7 @@
             <div class="project-card">
                 <div class="project-content">
                     <div class="project-image-container">
-                        <img class="project-image" src="https://via.placeholder.com/200x140?text=CYP1A2+Study" alt="CYP1A2 Genotypes Study" onclick="openModal(this)">
+                        <img class="project-image" src="images/capstone-project1.jpeg" alt="CYP1A2 Genotypes Study" onclick="openModal(this)">
                     </div>
                     <div class="project-info-content">
                         <div class="project-header">
@@ -372,7 +372,7 @@
             <div class="project-card">
                 <div class="project-content">
                     <div class="project-image-container">
-                        <img class="project-image" src="https://via.placeholder.com/200x140?text=LiveUseful+App" alt="LiveUseful App" onclick="openModal(this)">
+                        <img class="project-image" src="images/live-useful-project.jpeg" alt="LiveUseful App" onclick="openModal(this)">
                     </div>
                     <div class="project-info-content">
                         <div class="project-header">
