Update to Projects section

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <div class="nav-wrapper">
             <nav class="nav">
                 <ul class="nav-menu">
-                    <li class="nav-item active" data-page="home">Home</li>
+                    <li class="nav-item active" data-page="me">Me</li>
                     <li class="nav-item" data-page="education">Education</li>
                     <li class="nav-item" data-page="experience">Experience</li>
                     <li class="nav-item" data-page="projects">Projects</li>
@@ -408,13 +408,12 @@
 
     <!-- Main Content -->
     <div class="main-content">
-        <!-- Home Page -->
-        <div id="home" class="page-section active">
+        <!-- Me Page -->
+        <div id="me" class="page-section active">
             <div class="container">
-                <header class="header">
+                <header class="header" style="margin-top: 40px;">
                     <h1 class="name">Ugur Ersoz</h1>
-                    <p class="alt-names">(Türkçe: Uğur Ersöz / Deutsch: Ugur Ersöz)</p>
-                    <p class="title">Product Developer & Life Science Researcher</p>
+                    <p class="alt-names" style="font-size: 1.1rem;">(Türkçe: Uğur Ersöz / Deutsch: Ugur Ersöz)</p>
                     <div class="contact">
                         <a class="contact-item" href="mailto:uersoz55@gmail.com">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Email"> 
@@ -432,7 +431,7 @@
                 </header>
 
                 <section class="section">
-                    <h2 class="section-title">👋 Welcome</h2>
+                    <h2 class="section-title">👋 Your Friendly Neighborhood Life Science Engineer </h2>
                     <div class="card">
                         <p style="font-size: 1.1rem; line-height: 1.8; color: #555; text-align: center;">
                             I'm a passionate product developer and life science researcher with expertise in biotechnology, 
@@ -456,7 +455,11 @@
                                 <div class="job-title">Master of Life Science Engineering & Management</div>
                                 <div class="company">HTW Berlin</div>
                             </div>
-                            <div class="job-duration">Oct 2024 - Present</div>
+                            <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" 
+                                 onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" 
+                                 onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">
+                                Oct 2024 - Present
+                            </div>
                         </div>
                         <div class="job-description">
                             <p style="margin-top: 12px; color: #555; line-height: 1.6;">
@@ -472,11 +475,15 @@
                                 <div class="job-title">Bachelor of Science – Molecular Biology and Genetics</div>
                                 <div class="company">Bahçeşehir University</div>
                             </div>
-                            <div class="job-duration">Sep 2018 - 2023</div>
+                            <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" 
+                                 onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" 
+                                 onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">
+                                Sep 2018 - 2023
+                            </div>
                         </div>
                         <div class="job-description">
                             <ul>
-                                <li><strong>ApplyBAU Scholarship recipient</strong> - Academic excellence recognition</li>
+                                <li><strong>ApplyBAU Scholarship</strong>
                                 <li><strong>Capstone Project Grade: A</strong> - Highest achievement in final project</li>
                                 <li>Comprehensive study of molecular mechanisms, genetic engineering, and biotechnology applications</li>
                                 <li>Specialized coursework in bioinformatics, protein biochemistry, and molecular diagnostics</li>
@@ -499,7 +506,11 @@
                                 <div class="job-title">Product Developer & Researcher</div>
                                 <div class="company">Uniqgene</div>
                             </div>
-                            <div class="job-duration">Jan 2023 - Oct 2024</div>
+                            <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" 
+                                 onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" 
+                                 onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">
+                                Jan 2023 - Oct 2024
+                            </div>
                         </div>
                         <div class="job-description">
                             <ul>
@@ -519,7 +530,7 @@
                                 <div class="job-title">Research and Development Intern</div>
                                 <div class="company">Uniqgene</div>
                             </div>
-                            <div class="job-duration">Jul - Aug 2023</div>
+                            <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Jul - Aug 2023</div>
                         </div>
                         <div class="job-description">
                             <ul>
@@ -537,7 +548,7 @@
                                 <div class="job-title">Intern & Growth Hacker</div>
                                 <div class="company">Uniqgene</div>
                             </div>
-                            <div class="job-duration">Feb 2022 - Jan 2023</div>
+                            <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Feb 2022 - Jan 2023</div>
                         </div>
                         <div class="job-description">
                             <ul>
@@ -555,7 +566,7 @@
                                 <div class="job-title">Engineering Team Member</div>
                                 <div class="company">Bahçeşehir University - Career and Development Club</div>
                             </div>
-                            <div class="job-duration">Oct 2020 - 2022</div>
+                            <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Oct 2020 - 2022</div>
                         </div>
                         <div class="job-description">
                             <ul>
@@ -577,18 +588,18 @@
                     <div class="card">
                         <div class="project-content">
                             <div class="project-image-container">
-                                <img class="project-image" src="data:images/oxford-uniqgene-poster.png" alt="Genetic Testing Research" onclick="openModal(this)">
+                                <img class="project-image" src="images/oxford-uniqgene-poster.png" alt="Genetic Testing Research" onclick="openModal(this)" style="width: 100%; height: 100%; object-fit: cover; max-width: 100%; max-height: 100%;">
                             </div>
                             <div class="project-info">
                                 <div class="job-header">
                                     <div>
                                         <div class="job-title">⌚ Integration of Genetic Testing with Wearable Technology</div>
-                                        <div class="company">📊 Uniqgene Research Paper & Poster</div>
+                                        <div class="company">📊 Uniqgene - Research Paper & Poster</div>
                                     </div>
-                                    <div class="job-duration">Apr - Sep 2024</div>
+                                    <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Apr - Sep 2024</div>
                                 </div>
                                 <div class="card-description">
-                                    Advanced biomarkers for personalized sports and nutrition management. Presented at The Podium Institute Inaugural Annual Conference on Sports Medicine and Technology in Oxford. Examined integration of genetic data with wearables for performance optimization and injury prevention.
+                                    Advanced biomarkers for personalized sports and nutrition management. Presented at The Podium Institute Inaugural Annual Conference on Sports Medicine and Technology in University of Oxford. Examined integration of genetic data with wearables for performance optimization and injury prevention.
                                 </div>
                                 <div class="project-links">
                                     
@@ -604,21 +615,30 @@
                     <div class="card">
                         <div class="project-content">
                             <div class="project-image-container">
-                                <img class="project-image" src="data:images/capstone-project1.jpeg" alt="CYP1A2 Study" onclick="openModal(this)">
+                                <div style="display: flex; gap: 10px;">
+                                    <img class="project-image" src="images/capstone-project1.jpeg" 
+                                         alt="CYP1A2 Study - Image 1" 
+                                         onclick="openModal(this)" 
+                                         style="width: 50%; height: 150px; object-fit: cover;">
+                                    <img class="project-image" src="images/capstone-project2.jpeg" 
+                                         alt="CYP1A2 Study - Image 2" 
+                                         onclick="openModal(this)" 
+                                         style="width: 50%; height: 150px; object-fit: cover;">
+                                </div>
                             </div>
                             <div class="project-info">
                                 <div class="job-header">
                                     <div>
                                         <div class="job-title">☕ CYP1A2 Genotypes & Caffeine Metabolism Study</div>
-                                        <div class="company">🎓 Bahçeşehir University Capstone Project</div>
+                                        <div class="company">🎓 Bahçeşehir University - Capstone Project</div>
                                     </div>
-                                    <div class="job-duration">Feb - Jun 2023</div>
+                                    <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Feb - Jun 2023</div>
                                 </div>
                                 <div class="card-description">
                                     Genetic approach to optimal caffeine consumption practices for Turkish young adult population. Completed with highest grade A and presented to departmental jury. Focused on the relation between genotype and caffeine metabolism/sports performance.
                                 </div>
                                 <div class="project-links">
-                                    <a href="https://github.com/ugrersoz/cyp1a2-caffeine-study" target="_blank" class="project-link">
+                                    <a href="https://github.com/ugrersoz/bsc-capstone-project" target="_blank" class="project-link">
                                         <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="16" height="16" alt="GitHub">
                                         GitHub
                                     </a>
@@ -630,15 +650,15 @@
                     <div class="card">
                         <div class="project-content">
                             <div class="project-image-container">
-                                <img class="project-image" src="data:images/live-useful-project.jpeg" alt="LiveUseful App" onclick="openModal(this)">
+                                <img class="project-image" src="images/live-useful-project.jpeg" alt="LiveUseful App" onclick="openModal(this)">
                             </div>
                             <div class="project-info">
                                 <div class="job-header">
                                     <div>
                                         <div class="job-title">📱 LiveUseful - Lifestyle Management App</div>
-                                        <div class="company">🏆 Personal Development Project</div>
+                                        <div class="company">🏆MVZ-YETGEN Group Project - Startup Day</div>
                                     </div>
-                                    <div class="job-duration">Jan - Dec 2022</div>
+                                    <div class="job-duration" style="background: linear-gradient(135deg, #e1f0ff, #f0f7ff); border: 2px solid #4285f4; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(66, 133, 244, 0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Jan - Dec 2022</div>
                                 </div>
                                 <div class="card-description">
                                     Mobile application designed to help users manage their daily activities, track habits, and achieve personal goals. Features include task management, habit tracking, progress visualization, and personalized recommendations based on user behavior patterns.
